--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/instagram?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database=mysql
+spring.jpa.open-in-view=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+jwt.secret=my-very-secret-key
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6001
+
 
