--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/instagram?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/instagram?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
 spring.jpa.open-in-view=true
 
@@ -17,4 +18,4 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
-logging.level.root=debug
+#logging.level.org.hibernate.type.descriptor.sql=true
